add_subdirectory(0201_SqList)
add_subdirectory(0202_Union)
add_subdirectory(0203_MergeSqList)
add_subdirectory(0204_LinkList)
add_subdirectory(0205_MergeList)
add_subdirectory(0206_SLinkList)
add_subdirectory(0207_Difference)
add_subdirectory(0208_DuLinkList)
add_subdirectory(0209_ELinkList)
add_subdirectory(0210_MergeEList)
add_subdirectory(0211_Polynomial)

add_subdirectory(0301_SqStack)
add_subdirectory(0302_Conversion)
add_subdirectory(0303_LineEdit)
add_subdirectory(0304_Maze)
add_subdirectory(0305_Expression)
add_subdirectory(0306_Hanoi)
add_subdirectory(0307_LinkQueue)
add_subdirectory(0308_SqQueue)
add_subdirectory(0309_BankQueuing)

add_subdirectory(0401_SString)
add_subdirectory(0402_HString)
add_subdirectory(0403_LString)
add_subdirectory(0404_KMP)
add_subdirectory(0405_WordList)

add_subdirectory(0501_Array)
add_subdirectory(0502_TSMatrix)
add_subdirectory(0503_RLSMatrix)
add_subdirectory(0504_CrossList)
add_subdirectory(0505_GList-HT)
add_subdirectory(0506_GList-E)
add_subdirectory(0507_MPList)

add_subdirectory(0601_SqBiTree)
add_subdirectory(0602_BiTree)
add_subdirectory(0603_BiTriTree)
add_subdirectory(0604_BiThrTree)
add_subdirectory(0605_PTree)
add_subdirectory(0606_CTree)
add_subdirectory(0607_CSTree)
add_subdirectory(0608_MFSet)
add_subdirectory(0609_HuffmanTree)
add_subdirectory(0610_PowerSet)
add_subdirectory(0611_NQueens)

add_subdirectory(0701_MGraph)
add_subdirectory(0702_ALGraph)
add_subdirectory(0703_OLGraph)
add_subdirectory(0704_AMLGraph)
add_subdirectory(0705_SpanningTree)
add_subdirectory(0706_StronglyConnectedComponents)
add_subdirectory(0707_MinimumSpanningTree)
add_subdirectory(0708_ArticulationPoints)
add_subdirectory(0709_TopologicalSorting)
add_subdirectory(0710_CriticalPathMethod)
add_subdirectory(0711_ShortestPaths)

add_subdirectory(0801_BoundaryTagMethod)
add_subdirectory(0802_BuddySystem)
add_subdirectory(0803_GarbageCollection)
